@@ -102,6 +102,7 @@ def test_iterpose():
 
 def test_distinct():
     assert distinct('abcbad') == list('abcd')
+    assert distinct([{}, {}, {'a': 1}, {'b': 2}], key=len) == [{}, {'a': 1}]
 
 def test_split():
     assert split(_ % 2, range(5)) == [[1, 3], [0, 2, 4]]
